@@ -8,7 +8,7 @@ MEDIA_TYPE = CD-ROM
 # Library and font reduction need the dependencies of additional drivers.
 EXTRADRIVERS = $(BASE_TMP)floppy/cd-drivers/tree $(BASE_TMP)floppy/net-drivers/tree
 EXTRATARGETS = build_floppy_cd-drivers build_floppy_net-drivers
-TARGET = $(INITRD) $(KERNEL) $(BOOT)
+TARGET = $(INITRD) $(KERNEL) $(BOOT) $(DEBIAN_CD_INFO)
 
 # FIXME: Temporary fix, these files should be in a udeb!
 EXTRALIBS = /lib/libnss_dns* /lib/libresolv*
