@@ -44,6 +44,8 @@ debian-installer (20040204) UNRELEASED; urgency=low
     - Fix up miniiso creation to fit into the new build system better.
     - Turn on miniiso creation for netboot, so there is a
       dest/netboot/mini.iso that behaves the same as a netboot would.
+    - Add a dest/cdrom/debian-cd_info.tar.gz with the syslinux screens
+      and splash image, for eventual use by debian-cd.
   * Richard Hirst
     - ia64: Fix cdrom to autoboot, and tidy up kernel params.  Partial
       fix for 227114.
